Update vapi-widget attributes for configuration

--- a/index.html
+++ b/index.html
@@ -63,9 +63,14 @@
 
     <!-- Vapi Widget -->
     <vapi-widget 
-        assistant-id="529f87e7-dea8-4afe-9e97-c6989bdce7af" 
-        public-key="6dec2bf2-ffc2-42e2-8087-c6476339d58e">
+    public-key="6dec2bf2-ffc2-42e2-8087-c6476339d58e"
+    assistant-id="529f87e7-dea8-4afe-9e97-c6989bdce7af"
+    mode="voice"
+    theme="dark"
+    base-bg-color="#000000"
+    accent-color="#14B8A6"
     </vapi-widget>
+
 
     <script src="https://unpkg.com/@vapi-ai/client-sdk-react/dist/embed/widget.umd.js"></script>
 </body>
