Add Vapi SDK script to index.html

--- a/index.html
+++ b/index.html
@@ -337,5 +337,8 @@ document.getElementById('startVoiceBtn').addEventListener('click', function() {
 });
 </script>
 
+        <!-- Vapi SDK Script -->
+    <script src="https://cdn.vapi.ai/js/widget.js"></script>
+
 </body>
 </html>
