Hide start voice button by default and update call status
Updated the start voice button to be hidden by default and modified the call status message.

--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
                 </div>
                 <div id="vapi-container">
                     <button id="startVoiceBtn" style="
-                        display: block;
+                        display: none;
                         margin: 40px auto;
                         padding: 20px 40px;
                         font-size: 1.2em;
@@ -203,7 +203,7 @@
                         box-shadow: 0 4px 15px rgba(102, 126, 234, 0.4);">
                         🎤 Start Voice Call
                     </button>
-    <div id="callStatus" style="text-align: center; margin-top: 20px; color: #667eea; font-weight: 600;"></div>
+    <div id="callStatus" style="text-align: center; margin-top: 20px; color: #667eea; font-weight: 600;"Look for the floating voice button in the bottom-right corner to start talking!></div>
 </div>
 <div id="vapi-container"></div>
                 
